[project]
authors = [{ name = "SoulMelody", email = "yjxrtzyx@gmail.com" }]
version = "0.1.1"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
name = "anyf0"
description = "Use VocalShifter to visualize f0 curve instead of matplotlib"
keywords = []
classifiers = []
dependencies = [
    "click>=8.4.1",
    "construct>=2.10.70",
    "libf0>=1.1.1",
    "numba>=0.65.1",
    "praat-parselmouth>=0.4.7",
    "pretty-midi>=0.2.11",
    "pyworld-prebuilt>=0.3.5.post2",
    "tgt>=1.5",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.27.0",
    "onnxruntime-ep-webgpu>=0.1.0",
    "swift-f0>=0.1.2",
]
cuda = [
    "onnxruntime-gpu[cudnn]>=1.27.0",
    "nvidia-cuda-runtime>=13.3.29",
    "nvidia-cufft>=12.3.0.29",
    "nvidia-curand>=10.4.3.29",
    "nvidia-cuda-nvrtc>=13.3.33",
    "swift-f0>=0.1.2",
]

[dependency-groups]
dev = [
    "jaxtyping>=0.3.11",
    "matplotlib>=3.11.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
    ],
]

[[tool.uv.index]]
name = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[project.scripts]
anyf0 = "anyf0.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
